# fhir-patient-csv

./: .gitignore  README.md  docker-compose.yml
phir-patient/: Dockerfile  pyproject.toml
phir-patient/src/: main.py
phir-patient/src/patients/: fhir_client.py  mappings.py  models.py  router.py  schema.py  service.py  settings.py  utils.py
phir-patient/tests/: conftest.py  test_patients.py
