[tool.poetry]
name = "phir-patient"
version = "0.1.0"
description = ""
authors = ["gabriel chaves <gabrieloliveirachaves754@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
python-multipart = "^0.0.9"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
fhirclient = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.7"


[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
ignore = ["PT001"]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']



[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'auto'


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
